{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 38,
  "lineage": "7434b24b-aa75-2be5-32df-4e0bb67a74af",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510025161058:security-group/sg-00feee23c42c1e912",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00feee23c42c1e912",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds_security_group",
            "name_prefix": "",
            "owner_id": "510025161058",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "author": "Grupo 6",
              "subject": "Cloud Computing",
              "university": "ITBA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0067bb029102e1918"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510025161058:internet-gateway/igw-05415aa03e5cb88c2",
            "id": "igw-05415aa03e5cb88c2",
            "owner_id": "510025161058",
            "tags_all": {
              "author": "Grupo 6",
              "subject": "Cloud Computing",
              "university": "ITBA"
            },
            "vpc_id": "vpc-0067bb029102e1918"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510025161058:route-table/rtb-0bcc75fd9e3e6682e",
            "id": "rtb-0bcc75fd9e3e6682e",
            "owner_id": "510025161058",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route_table_private_0"
            },
            "tags_all": {
              "Name": "route_table_private_0",
              "author": "Grupo 6",
              "subject": "Cloud Computing",
              "university": "ITBA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0067bb029102e1918"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510025161058:route-table/rtb-0de4a34617b30520c",
            "id": "rtb-0de4a34617b30520c",
            "owner_id": "510025161058",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route_table_private_1"
            },
            "tags_all": {
              "Name": "route_table_private_1",
              "author": "Grupo 6",
              "subject": "Cloud Computing",
              "university": "ITBA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0067bb029102e1918"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "functions",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5dc95caee874ea6",
            "route_table_id": "rtb-0bcc75fd9e3e6682e",
            "subnet_id": "subnet-03d1aae5c3966d760"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.functions",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee452cd73dee20ce",
            "route_table_id": "rtb-0de4a34617b30520c",
            "subnet_id": "subnet-01b261a5eef3ffb2a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.functions",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "persistance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0586a1addfe56978e",
            "route_table_id": "rtb-0bcc75fd9e3e6682e",
            "subnet_id": "subnet-0e5ed4d93dc17b92b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.functions",
            "module.vpc.aws_subnet.persistance",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c36ec805aa3ee3b5",
            "route_table_id": "rtb-0de4a34617b30520c",
            "subnet_id": "subnet-03a9b101e3110f3b0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.functions",
            "module.vpc.aws_subnet.persistance",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "functions",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510025161058:subnet/subnet-03d1aae5c3966d760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d1aae5c3966d760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "510025161058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_functions_0"
            },
            "tags_all": {
              "Name": "subnet_functions_0",
              "author": "Grupo 6",
              "subject": "Cloud Computing",
              "university": "ITBA"
            },
            "vpc_id": "vpc-0067bb029102e1918"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510025161058:subnet/subnet-01b261a5eef3ffb2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b261a5eef3ffb2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "510025161058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_functions_1"
            },
            "tags_all": {
              "Name": "subnet_functions_1",
              "author": "Grupo 6",
              "subject": "Cloud Computing",
              "university": "ITBA"
            },
            "vpc_id": "vpc-0067bb029102e1918"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "persistance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510025161058:subnet/subnet-0e5ed4d93dc17b92b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5ed4d93dc17b92b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "510025161058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_persistance_0"
            },
            "tags_all": {
              "Name": "subnet_persistance_0",
              "author": "Grupo 6",
              "subject": "Cloud Computing",
              "university": "ITBA"
            },
            "vpc_id": "vpc-0067bb029102e1918"
          },
          "dependencies": [
            "module.vpc.aws_subnet.functions",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510025161058:subnet/subnet-03a9b101e3110f3b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a9b101e3110f3b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "510025161058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_persistance_1"
            },
            "tags_all": {
              "Name": "subnet_persistance_1",
              "author": "Grupo 6",
              "subject": "Cloud Computing",
              "university": "ITBA"
            },
            "vpc_id": "vpc-0067bb029102e1918"
          },
          "dependencies": [
            "module.vpc.aws_subnet.functions",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510025161058:vpc/vpc-0067bb029102e1918",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d79a5ce4c25e7fbc",
            "default_route_table_id": "rtb-03e69915ae4bbee22",
            "default_security_group_id": "sg-0ea250470b0269335",
            "dhcp_options_id": "dopt-0e9d10fb2a062e0d3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0067bb029102e1918",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e69915ae4bbee22",
            "owner_id": "510025161058",
            "tags_all": {
              "author": "Grupo 6",
              "subject": "Cloud Computing",
              "university": "ITBA"
            }
          }
        }
      ]
    }
  ]
}